@@ -156,6 +156,22 @@ name|common
 operator|.
 name|params
 operator|.
+name|SolrParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|CommonParams
 import|;
 end_import
@@ -399,24 +415,92 @@ comment|//            "stats_ti_ni_dv","stats_tl_ni_dv","stats_tf_ni_dv","stats_
 block|}
 control|)
 block|{
+comment|// all of our checks should work with all of these params
+comment|// ie: with or w/o these excluded filters, results should be the same.
+name|SolrParams
+index|[]
+name|baseParamsSet
+init|=
+operator|new
+name|SolrParams
+index|[]
+block|{
+name|params
+argument_list|(
+literal|"stats.field"
+argument_list|,
+name|f
+argument_list|,
+literal|"stats"
+argument_list|,
+literal|"true"
+argument_list|)
+block|,
+name|params
+argument_list|(
+literal|"stats.field"
+argument_list|,
+literal|"{!ex=fq1,fq2}"
+operator|+
+name|f
+argument_list|,
+literal|"stats"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=fq1}-id:[0 TO 2]"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=fq2}-id:[2 TO 1000]"
+argument_list|)
+block|,
+name|params
+argument_list|(
+literal|"stats.field"
+argument_list|,
+literal|"{!ex=fq1}"
+operator|+
+name|f
+argument_list|,
+literal|"stats"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=fq1}id:1"
+argument_list|)
+block|}
+decl_stmt|;
 name|doTestFieldStatisticsResult
 argument_list|(
 name|f
+argument_list|,
+name|baseParamsSet
 argument_list|)
 expr_stmt|;
 name|doTestFieldStatisticsMissingResult
 argument_list|(
 name|f
+argument_list|,
+name|baseParamsSet
 argument_list|)
 expr_stmt|;
 name|doTestFacetStatisticsResult
 argument_list|(
 name|f
+argument_list|,
+name|baseParamsSet
 argument_list|)
 expr_stmt|;
 name|doTestFacetStatisticsMissingResult
 argument_list|(
 name|f
+argument_list|,
+name|baseParamsSet
 argument_list|)
 expr_stmt|;
 name|clearIndex
@@ -485,6 +569,10 @@ name|doTestFieldStatisticsResult
 parameter_list|(
 name|String
 name|f
+parameter_list|,
+name|SolrParams
+index|[]
+name|baseParamsSet
 parameter_list|)
 throws|throws
 name|Exception
@@ -557,23 +645,26 @@ name|commit
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// status should be the same regardless of baseParams
+for|for
+control|(
+name|SolrParams
+name|baseParams
+range|:
+name|baseParamsSet
+control|)
+block|{
 name|assertQ
 argument_list|(
 literal|"test statistics values"
 argument_list|,
 name|req
 argument_list|(
+name|baseParams
+argument_list|,
 literal|"q"
 argument_list|,
 literal|"*:*"
-argument_list|,
-literal|"stats"
-argument_list|,
-literal|"true"
-argument_list|,
-literal|"stats.field"
-argument_list|,
-name|f
 argument_list|,
 literal|"stats.calcdistinct"
 argument_list|,
@@ -601,6 +692,49 @@ argument_list|,
 literal|"//double[@name='stddev'][.='12.909944487358056']"
 argument_list|)
 expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"test statistics w/fq"
+argument_list|,
+name|req
+argument_list|(
+name|baseParams
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"-id:4"
+argument_list|,
+literal|"stats.calcdistinct"
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|,
+literal|"//double[@name='min'][.='-30.0']"
+argument_list|,
+literal|"//double[@name='max'][.='-10.0']"
+argument_list|,
+literal|"//double[@name='sum'][.='-60.0']"
+argument_list|,
+literal|"//long[@name='count'][.='3']"
+argument_list|,
+literal|"//long[@name='missing'][.='0']"
+argument_list|,
+literal|"//long[@name='countDistinct'][.='3']"
+argument_list|,
+literal|"count(//arr[@name='distinctValues']/*)=3"
+argument_list|,
+literal|"//double[@name='sumOfSquares'][.='1400.0']"
+argument_list|,
+literal|"//double[@name='mean'][.='-20.0']"
+argument_list|,
+literal|"//double[@name='stddev'][.='10.0']"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|doTestMVFieldStatisticsResult
 specifier|public
@@ -727,23 +861,78 @@ name|commit
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// with or w/o these excluded filters, results should be the same
+for|for
+control|(
+name|SolrParams
+name|baseParams
+range|:
+operator|new
+name|SolrParams
+index|[]
+block|{
+name|params
+argument_list|(
+literal|"stats.field"
+argument_list|,
+name|f
+argument_list|,
+literal|"stats"
+argument_list|,
+literal|"true"
+argument_list|)
+block|,
+name|params
+argument_list|(
+literal|"stats.field"
+argument_list|,
+literal|"{!ex=fq1}"
+operator|+
+name|f
+argument_list|,
+literal|"stats"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=fq1}id:1"
+argument_list|)
+block|,
+name|params
+argument_list|(
+literal|"stats.field"
+argument_list|,
+literal|"{!ex=fq1,fq2}"
+operator|+
+name|f
+argument_list|,
+literal|"stats"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=fq1}-id:[0 TO 2]"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=fq2}-id:[2 TO 1000]"
+argument_list|)
+block|}
+control|)
+block|{
 name|assertQ
 argument_list|(
 literal|"test statistics values"
 argument_list|,
 name|req
 argument_list|(
+name|baseParams
+argument_list|,
 literal|"q"
 argument_list|,
 literal|"*:*"
-argument_list|,
-literal|"stats"
-argument_list|,
-literal|"true"
-argument_list|,
-literal|"stats.field"
-argument_list|,
-name|f
 argument_list|,
 literal|"stats.calcdistinct"
 argument_list|,
@@ -773,29 +962,66 @@ argument_list|)
 expr_stmt|;
 name|assertQ
 argument_list|(
-literal|"test statistics values"
+literal|"test statistics values w/fq"
 argument_list|,
 name|req
 argument_list|(
+name|baseParams
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"-id:1"
+argument_list|,
 literal|"q"
 argument_list|,
 literal|"*:*"
 argument_list|,
-literal|"stats"
+literal|"stats.calcdistinct"
 argument_list|,
 literal|"true"
+argument_list|)
 argument_list|,
-literal|"stats.field"
+literal|"//double[@name='min'][.='-40.0']"
 argument_list|,
-name|f
+literal|"//double[@name='max'][.='200.0']"
 argument_list|,
-literal|"stats.facet"
+literal|"//double[@name='sum'][.='119.0']"
 argument_list|,
-literal|"active_s"
+literal|"//long[@name='count'][.='6']"
+argument_list|,
+literal|"//long[@name='missing'][.='1']"
+argument_list|,
+literal|"//long[@name='countDistinct'][.='6']"
+argument_list|,
+literal|"count(//arr[@name='distinctValues']/*)=6"
+argument_list|,
+literal|"//double[@name='sumOfSquares'][.='43001.0']"
+argument_list|,
+literal|"//double[@name='mean'][.='19.833333333333332']"
+argument_list|,
+literal|"//double[@name='stddev'][.='90.15634568163611']"
+argument_list|)
+expr_stmt|;
+comment|// TODO: why are there 3 identical requests below?
+name|assertQ
+argument_list|(
+literal|"test statistics values"
+argument_list|,
+name|req
+argument_list|(
+name|baseParams
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"*:*"
 argument_list|,
 literal|"stats.calcdistinct"
 argument_list|,
 literal|"true"
+argument_list|,
+literal|"stats.facet"
+argument_list|,
+literal|"active_s"
 argument_list|)
 argument_list|,
 literal|"//double[@name='min'][.='-100.0']"
@@ -829,25 +1055,19 @@ literal|"test value for active_s=true"
 argument_list|,
 name|req
 argument_list|(
+name|baseParams
+argument_list|,
 literal|"q"
 argument_list|,
 literal|"*:*"
 argument_list|,
-literal|"stats"
+literal|"stats.calcdistinct"
 argument_list|,
 literal|"true"
-argument_list|,
-literal|"stats.field"
-argument_list|,
-name|f
 argument_list|,
 literal|"stats.facet"
 argument_list|,
 literal|"active_s"
-argument_list|,
-literal|"stats.calcdistinct"
-argument_list|,
-literal|"true"
 argument_list|)
 argument_list|,
 literal|"//lst[@name='true']/double[@name='min'][.='-100.0']"
@@ -877,29 +1097,19 @@ literal|"test value for active_s=false"
 argument_list|,
 name|req
 argument_list|(
+name|baseParams
+argument_list|,
 literal|"q"
 argument_list|,
 literal|"*:*"
-argument_list|,
-literal|"stats"
-argument_list|,
-literal|"true"
-argument_list|,
-literal|"stats.field"
-argument_list|,
-name|f
-argument_list|,
-literal|"stats.facet"
-argument_list|,
-literal|"active_s"
 argument_list|,
 literal|"stats.calcdistinct"
 argument_list|,
 literal|"true"
 argument_list|,
-literal|"indent"
+literal|"stats.facet"
 argument_list|,
-literal|"true"
+literal|"active_s"
 argument_list|)
 argument_list|,
 literal|"//lst[@name='false']/double[@name='min'][.='-40.0']"
@@ -923,6 +1133,7 @@ argument_list|,
 literal|"//lst[@name='false']/double[@name='stddev'][.='23.59908190304586']"
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 DECL|method|testFieldStatisticsResultsStringField
 specifier|public
@@ -1322,6 +1533,10 @@ name|doTestFieldStatisticsMissingResult
 parameter_list|(
 name|String
 name|f
+parameter_list|,
+name|SolrParams
+index|[]
+name|baseParamsSet
 parameter_list|)
 throws|throws
 name|Exception
@@ -1390,28 +1605,36 @@ name|commit
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|assertQ
-argument_list|(
-literal|"test statistics values"
-argument_list|,
+comment|// status should be the same regardless of baseParams
+for|for
+control|(
+name|SolrParams
+name|baseParams
+range|:
+name|baseParamsSet
+control|)
+block|{
+name|SolrQueryRequest
+name|request
+init|=
 name|req
 argument_list|(
+name|baseParams
+argument_list|,
 literal|"q"
 argument_list|,
 literal|"*:*"
-argument_list|,
-literal|"stats"
-argument_list|,
-literal|"true"
-argument_list|,
-literal|"stats.field"
-argument_list|,
-name|f
 argument_list|,
 literal|"stats.calcdistinct"
 argument_list|,
 literal|"true"
 argument_list|)
+decl_stmt|;
+name|assertQ
+argument_list|(
+literal|"test statistics values"
+argument_list|,
+name|request
 argument_list|,
 literal|"//double[@name='min'][.='-40.0']"
 argument_list|,
@@ -1435,6 +1658,7 @@ literal|"//double[@name='stddev'][.='15.275252316519467']"
 argument_list|)
 expr_stmt|;
 block|}
+block|}
 DECL|method|doTestFacetStatisticsResult
 specifier|public
 name|void
@@ -1442,6 +1666,10 @@ name|doTestFacetStatisticsResult
 parameter_list|(
 name|String
 name|f
+parameter_list|,
+name|SolrParams
+index|[]
+name|baseParamsSet
 parameter_list|)
 throws|throws
 name|Exception
@@ -1556,23 +1784,30 @@ name|f
 operator|+
 literal|"']/lst[@name='facets']/lst[@name='active_s']"
 decl_stmt|;
+comment|// status should be the same regardless of baseParams
+for|for
+control|(
+name|SolrParams
+name|baseParams
+range|:
+name|baseParamsSet
+control|)
+block|{
 name|assertQ
 argument_list|(
 literal|"test value for active_s=true"
 argument_list|,
 name|req
 argument_list|(
+name|baseParams
+argument_list|,
 literal|"q"
 argument_list|,
 literal|"*:*"
 argument_list|,
-literal|"stats"
+literal|"stats.calcdistinct"
 argument_list|,
 literal|"true"
-argument_list|,
-literal|"stats.field"
-argument_list|,
-name|f
 argument_list|,
 literal|"stats.facet"
 argument_list|,
@@ -1581,14 +1816,6 @@ argument_list|,
 literal|"stats.facet"
 argument_list|,
 literal|"other_s"
-argument_list|,
-literal|"stats.calcdistinct"
-argument_list|,
-literal|"true"
-argument_list|,
-literal|"indent"
-argument_list|,
-literal|"true"
 argument_list|)
 argument_list|,
 literal|"*[count("
@@ -1646,25 +1873,19 @@ literal|"test value for active_s=false"
 argument_list|,
 name|req
 argument_list|(
+name|baseParams
+argument_list|,
 literal|"q"
 argument_list|,
 literal|"*:*"
 argument_list|,
-literal|"stats"
+literal|"stats.calcdistinct"
 argument_list|,
 literal|"true"
-argument_list|,
-literal|"stats.field"
-argument_list|,
-name|f
 argument_list|,
 literal|"stats.facet"
 argument_list|,
 literal|"active_s"
-argument_list|,
-literal|"stats.calcdistinct"
-argument_list|,
-literal|"true"
 argument_list|)
 argument_list|,
 name|pre
@@ -1711,6 +1932,7 @@ literal|"/lst[@name='false']/double[@name='stddev'][.='7.0710678118654755']"
 argument_list|)
 expr_stmt|;
 block|}
+block|}
 DECL|method|doTestFacetStatisticsMissingResult
 specifier|public
 name|void
@@ -1718,6 +1940,10 @@ name|doTestFacetStatisticsMissingResult
 parameter_list|(
 name|String
 name|f
+parameter_list|,
+name|SolrParams
+index|[]
+name|baseParamsSet
 parameter_list|)
 throws|throws
 name|Exception
@@ -1802,31 +2028,34 @@ name|commit
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// status should be the same regardless of baseParams
+for|for
+control|(
+name|SolrParams
+name|baseParams
+range|:
+name|baseParamsSet
+control|)
+block|{
 name|assertQ
 argument_list|(
 literal|"test value for active_s=true"
 argument_list|,
 name|req
 argument_list|(
+name|baseParams
+argument_list|,
 literal|"q"
 argument_list|,
 literal|"*:*"
 argument_list|,
-literal|"stats"
+literal|"stats.calcdistinct"
 argument_list|,
 literal|"true"
-argument_list|,
-literal|"stats.field"
-argument_list|,
-name|f
 argument_list|,
 literal|"stats.facet"
 argument_list|,
 literal|"active_s"
-argument_list|,
-literal|"stats.calcdistinct"
-argument_list|,
-literal|"true"
 argument_list|)
 argument_list|,
 literal|"//lst[@name='true']/double[@name='min'][.='10.0']"
@@ -1856,17 +2085,11 @@ literal|"test value for active_s=false"
 argument_list|,
 name|req
 argument_list|(
+name|baseParams
+argument_list|,
 literal|"q"
 argument_list|,
 literal|"*:*"
-argument_list|,
-literal|"stats"
-argument_list|,
-literal|"true"
-argument_list|,
-literal|"stats.field"
-argument_list|,
-name|f
 argument_list|,
 literal|"stats.facet"
 argument_list|,
@@ -1898,6 +2121,7 @@ argument_list|,
 literal|"//lst[@name='false']/double[@name='stddev'][.='0.0']"
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 DECL|method|testFieldStatisticsResultsNumericFieldAlwaysMissing
 specifier|public
